--- a/FalseNearestNeighbours.ipynb
+++ b/FalseNearestNeighbours.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "systematic-cruise",
+   "id": "jewish-berlin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "active-member",
+   "id": "flexible-flesh",
    "metadata": {},
    "source": [
     "For this example we'll use a different autonomous dynamical system. The so-called Halvorsen system is an example of a $circulant$ system - that is, one in which each of the expression on the RHS is the same, just permuted."
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "chubby-provider",
+   "id": "connected-metabolism",
    "metadata": {},
    "outputs": [
     {
@@ -14588,7 +14588,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "composed-drill",
+   "id": "unable-marker",
    "metadata": {},
    "outputs": [
     {
@@ -19567,7 +19567,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "differential-struggle",
+   "id": "subject-cooperative",
    "metadata": {},
    "outputs": [
     {
@@ -19680,7 +19680,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "material-madness",
+   "id": "previous-backing",
    "metadata": {},
    "outputs": [
     {
@@ -19700,7 +19700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boxed-collaboration",
+   "id": "partial-recovery",
    "metadata": {},
    "source": [
     "## Computing False Nearest Neighbours\n",
@@ -19711,7 +19711,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "sacred-stake",
+   "id": "secret-integrity",
    "metadata": {},
    "outputs": [
     {
@@ -19742,7 +19742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "centered-novel",
+   "id": "convinced-ticket",
    "metadata": {},
    "source": [
     "Estimating the proportion of false nearest neighbours works, as follows:\n",
@@ -19756,7 +19756,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "pressed-ranking",
+   "id": "controlled-complex",
    "metadata": {},
    "outputs": [
     {
@@ -19794,7 +19794,7 @@
     "        for i in 1:(nz-m*τ) \n",
     "            ddist=myrms(vt-vt[:,i]*ones(1,nz-m*τ)) #distance from vt[:,i] to every point in vt\n",
     "            si=argmin(ddist,dims=2)                #shortest distance\n",
-    "            while abs(si[1][2]-i)<=Tth             #ensure that the shortest distance is ...\n",
+    "    http://localhost:8889/notebooks/FalseNearestNeighbours.ipynb#        while abs(si[1][2]-i)<=Tth             #ensure that the shortest distance is ...\n",
     "                ddist[si[1]]=Inf                   #outside the Theiler exclusion window \n",
     "                si=argmin(ddist,dims=2)            #it's a clumsy notation, by si[1] is the coordinate \n",
     "            end                                    #and si[1][2] is the index\n",
@@ -19812,7 +19812,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "premier-curtis",
+   "id": "extra-burke",
    "metadata": {},
    "outputs": [
     {
@@ -19843,7 +19843,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "outer-apache",
+   "id": "unexpected-stability",
    "metadata": {},
    "outputs": [
     {
@@ -20042,7 +20042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "religious-person",
+   "id": "attractive-extent",
    "metadata": {},
    "source": [
     "Now it is over to you - rinse and repeat the process with different data, different dynamics, the addition of noise, shorter data sets, different embedding lag, etc..."
@@ -20050,7 +20050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liked-corpus",
+   "id": "corporate-activity",
    "metadata": {},
    "source": [
     "## Michael Small, 15/3/21"
@@ -20059,7 +20059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "annual-cross",
+   "id": "ceramic-kelly",
    "metadata": {},
    "outputs": [],
    "source": []
